# libasdf

./: .bumpver.toml  .clang-format  .clang-tidy  CHANGES.rst  CMakeLists.txt  Makefile.am  README.rst  config.h.cmake  configure.ac  towncrier.toml
.github/workflows/: build.yml  cmake.yml
changes/: +asdf-container-size.feature  +asdf-value-parent.feature  +cmake-build.misc  +cmake.general  +conda-build.misc  +logging-config.misc  +loglevels.bugfix  +missing-file.bugfix  +ndarray-data.general  +parser.bugfix  +version.general  101.feature  102.feature  104.feature  106.feature  119.feature  122.feature  124.doc  130.feature  132.feature  133.bugfix  134.bugfix  137.feature  145.feature  157.feature  214.feature  37.feature  62.feature  88.feature  93.bugfix  94.feature
cmake/: ASDFConfig.cmake  ASDFDependencies.cmake  ASDFOptions.cmake  SubmoduleInit.cmake
docs/: CMakeLists.txt  Makefile.am  conf.py  index.rst  links.rst
docs/api/asdf/: emitter.h.rst  error.h.rst  file.h.rst  log.h.rst  value.h.rst  yaml.h.rst
docs/api/asdf/core/: datatype.h.rst  ndarray.h.rst
docs/man/: asdf.1
docs/usage/: cli.rst  compression.rst  examples.rst  extensions.rst  ndarrays.rst  opening.rst  overview.rst  values.rst  writing.rst
include/: CMakeLists.txt  Makefile.am
include/asdf/: emitter.h  error.h  extension.h  file.h  log.h  parse.h  parser.h  value.h  (+1 more)
m4/: ax_check_endian_decl.m4  sphinx.m4
scripts/: extract_changelog_md.py
src/: CMakeLists.txt  block.c  block.h  compression.c  compression.h  context.c  context.h  emitter.c  emitter.h  error.c  error.h  event.c  event.h  extension_registry.c  extension_registry.h  extension_util.c  extension_util.h  file.c  file.h  info.c  info.h  log.c  log.h  main.c  parse.c  parse_util.c  parse_util.h  parser.c  parser.h  stream.c  stream.h  stream_intern.h  util.c  util.h  value.c  value.h  yaml.c  yaml.h
tests/: CMakeLists.txt  Makefile.am  munit.h  test-block.c  test-compression.c  test-core-extensions.c  test-emitter.c  test-event.c  test-extension.c  test-file.c  test-gwcs.c  test-info.sh  test-ndarray.c  test-parse-util.c  test-parse.c  test-parser.c  test-stream.c  test-tests.c  test-time.c  test-value-util.c  test-value.c  test-verify-checksums.sh  test-yaml.c  util.c  util.h
(+93 files in other folders)
