# CMake-related files to include in the distribution
CMAKE_DIST = CMakeLists.txt

EXTRA_DIST = \
    $(CMAKE_DIST) \
    conf.py \
    api/asdf/core/datatype.h.rst \
    api/asdf/core/ndarray.h.rst \
    api/asdf/error.h.rst \
    api/asdf/emitter.h.rst \
    api/asdf/error.h.rst \
    api/asdf/extension.h.rst \
    api/asdf/file.h.rst \
    api/asdf/value.h.rst \
    api/asdf/yaml.h.rst \
    environment.yml \
    index.rst \
    links.rst \
    usage/examples.rst \
    usage/extensions.rst \
    usage/opening.rst \
    usage/overview.rst \
    usage/values.rst \
    usage/writing.rst \
    _static/css/globalnav.css \
    _static/images/favicon.ico \
    _static/images/logo-dark-mode.png \
    _static/images/logo-light-mode.png
